# xai-openai

./: README.md  openai_components.py  openai_sample.xircuits  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: image_inference.xircuits  openai_sample.xircuits
